[package]
name = "fibonacci-circuit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "example1"
path = "src/example1.rs"

[[bin]]
name = "example2"
path = "src/example2.rs"

[dependencies]
halo2_proofs = { version = "0.2.0", features = ["dev-graph"] }
plotters = "0.3.4"
